:cyclone: Improved test playground

--- a/test/test.html
+++ b/test/test.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>jinq tests</title>
 </head>
 <body>
+    <pre id="output"></pre>
     <script src="../src/jinq.js"></script>
     <script src="test.js"></script>
 </body>
